<resources>
    <string name="app_name">Reto Financiera Oh</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_web_client_id">790109933384-vpfc109lhqsgsktiphub7hqsssfev82r.apps.googleusercontent.com</string>
    <string name="login_google">Login Google</string>
    <string name="todo">todo</string>
    <string name="mi_villano_favorito">Mi Villano Favorito</string>
    <string name="title_home">Películas</string>
    <string name="title_dashboard">confitería</string>
    <string name="title_notifications">Cine</string>
    <string name="title_activity_principal">Activity Principal</string>
    <string name="location_text_candy_store">Lima - Cinemark Megaplaza</string>
    <string name="combo_duo_vaso_cmk">combo duo vaso cmk</string>
    <string name="s_79_90">S/ 79.90</string>
    <string name="description_item_candy_store">1 Vaso Gigante Minions con gaseosa + 1 Gaseosa Chica + 1 Crismelo Mashmelo</string>
    <string name="confiteria_regular">CONFITERIA REGULAR</string>
    <string name="zero">0</string>
</resources>