<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="3dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/image_mi_villano"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/combo_duo_vaso_cmk"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/s_79_90"
                android:textColor="@color/cardview_dark_background"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/description_item_candy_store"
                android:textColor="@color/cardview_dark_background"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/descriptionTextView"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/dismissImageView"
                    android:layout_width="22dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/line"/>

                <TextView
                    android:id="@+id/amountTextView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/zero"/>

                <ImageView
                    android:id="@+id/addImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_add_24"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>